src/main/java/com/example/learn_jpa/exception/error/GlobalExceptionHandler.java
package com.example.learn_jpa.exception.error;public class GlobalExceptionHandler {
}
